# ShaderEffects

./: CMakeLists.txt  LICENSE  README.md
Rask/ShaderEffects/: CMakeLists.txt  Genie.qml  ItemBlur.qml  RoundItem.qml
Rask/ShaderEffects/shaders/: genie.vert  itemBlur.frag  roundItem.frag
